estaria todo funcionando en desarrollo, habria que subir a docker y probar en prod

--- a/public/login.html
+++ b/public/login.html
@@ -15,7 +15,7 @@
   <header>
     <div>
       <a href="index.html">
-        <img src="./img/logo.png" alt="Logo de Solo Caps"></a>
+        <img src="./img/logo.png" alt="Logo de Economía Doméstica"></a>
 
       <h1>Economia del Hogar</h1>
     </div>
@@ -23,7 +23,6 @@
 		<a href="index.html">Inicio</a>
 
 	  </nav>
-      <!-- <img class="carrito" src="./img/img-nuevas/carrito.png" alt="" /> -->
 
   </header>
 <main>
@@ -34,9 +33,10 @@
     	<label>Contraseña: <input type="text" name="password"></label>
     	<button type="button" onclick="login()" class="btn">Login</button>
     </form>
-      <div id="btn-extra">
+      
+      <!-- <div id="btn-extra">
         <a href="/register.html" class="btn">Registrarme</a>
-      </div>
+      </div> -->
   </div>
 
 	</form>
