agrego al dashboard resumen por rubro y grafico tortas

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -66,6 +66,27 @@
                     </div>
             </section>
         </div>
+        <section class="resumen-rubros">
+            <h2>Resumen por Rubro</h2>
+        
+            <!-- Tabla de resumen por rubro -->
+            <table class="table table-striped" id="rubrosTable">
+                <thead>
+                    <tr>
+                        <th>Rubro</th>
+                        <th>Total</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Aquí se llenarán los datos dinámicamente -->
+                </tbody>
+            </table>
+        
+            <!-- Gráfico de torta -->
+            <canvas id="rubrosChart"></canvas>
+        </section>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 	</main>
     <footer>
         <div class="footer">
