se modifico el dash, se acomo el estilo, se agrego fecha de vencimiento para poder ordenar y se prepara para envio de notificaciones por telegram

--- a/public/listado_gastos.html
+++ b/public/listado_gastos.html
@@ -59,6 +59,7 @@
                 </select>
             
                 <button type="button" id="aplicarFiltros">Aplicar</button>
+                <button type="button" id="ordenarVencimiento">Ordenar por Vencimiento</button>
             </div>
         </section>
         <section>
