modificaciones sobre el envio de notificaciones y pago desde telegram

--- a/public/index.html
+++ b/public/index.html
@@ -57,9 +57,9 @@
     </div>
 
     <!--fin de carrusel-->
-
+    <h2>Debes hacer log-in</h2>
     <!--PRODUCTOS-->
-    <section id="capsulas" class="tarjeta">
+    <section id="capsulas" class="tarjeta" style="display: none;">
       <h2>Debes hacer log-in</h2>
       <article>
         <div id="login-registro">
