modifique login password

--- a/public/login.html
+++ b/public/login.html
@@ -30,7 +30,7 @@
   <div id="login-registro">
       <form action="" method="POST" enctype="application/x-www-form-urlencoded" id="registro">
     	<label>Usuario: <input type="text" name="username"></label>
-    	<label>Contraseña: <input type="text" name="password"></label>
+    	<label>Contraseña: <input type="password" name="password"></label>
     	<button type="button" onclick="login()" class="btn">Login</button>
     </form>
       
