modificaciones del encabezado html

--- a/public/editar_gastos.html
+++ b/public/editar_gastos.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://kit.fontawesome.com/e0f7a1940e.js" crossorigin="anonymous"></script>
   
-    <title>Economia Familiar</title>
-    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
-  </head>
-  
-  <body>
-    <header>
-      <div>
-        <a href="index.html">
-          <img src="./img/logo.png" alt="Logo de Solo Caps"></a>
-  
-        <h1>Economia Familiar</h1>
+  <title>GastosHogar</title>
+  <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+</head>
+
+<body>
+  <header>
+    <div>
+      <a href="index.html">
+        <img src="./img/logo.png" alt="Logo de Gastos Hogar"></a>
+
+      <h1>Gastos del Hogar</h1>
       </div>
       <nav>
         <a href="index.html">Inicio</a>
