--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,16 +6,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://kit.fontawesome.com/e0f7a1940e.js" crossorigin="anonymous"></script>
-    <title>Gastos Familiares</title>
-    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+  <title>GastosHogar</title>
+  <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 </head>
+
 <body>
-	<header>
-        <div>
-            <a href="index.html">
-                <img src="./img/logo.png" alt="Logo de Solo Caps">
-            </a>
-            <h1>Gastos Familiares</h1>
+  <header>
+    <div>
+      <a href="index.html">
+        <img src="./img/logo.png" alt="Logo de Gastos Hogar"></a>
+
+      <h1>Gastos del Hogar</h1>
         </div>
         <nav>
             <a href="index.html">Inicio</a>
