--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/estilo.css">
   <script src="https://kit.fontawesome.com/e0f7a1940e.js" crossorigin="anonymous"></script>
 
-  <title>SoloCaps</title>
+  <title>GastosHogar</title>
   <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 </head>
 
@@ -17,9 +17,9 @@
   <header>
     <div>
       <a href="index.html">
-        <img src="./img/logo.png" alt="Logo de Solo Caps"></a>
+        <img src="./img/logo.png" alt="Logo de Gastos Hogar"></a>
 
-      <h1>Economía Doméstica</h1>
+      <h1>Gastos del Hogar</h1>
     </div>
     <nav>
       <a class="activo" href="index.html">Inicio</a>
