--- a/public/register.html
+++ b/public/register.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://kit.fontawesome.com/e0f7a1940e.js" crossorigin="anonymous"></script>
   
-    <title>SoloCaps</title>
-    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+  <title>GastosHogar</title>
+  <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 </head>
+
 <body>
   <header>
     <div>
       <a href="index.html">
-        <img src="./img/logo.png" alt="Logo de Solo Caps"></a>
+        <img src="./img/logo.png" alt="Logo de Gastos Hogar"></a>
 
-      <h1>Solo Caps</h1>
+      <h1>Gastos del Hogar</h1>
     </div>
     <nav>
 		<a href="index.html">Inicio</a>
