--- a/public/login.html
+++ b/public/login.html
@@ -35,9 +35,9 @@
     	<button type="button" onclick="login()" class="btn">Login</button>
     </form>
       
-      <!-- <div id="btn-extra">
-        <a href="/register.html" class="btn">Registrarme</a>
-      </div> -->
+      <div id="btn-extra">
+        <a href="/cambiar-password.html">¿Deseás cambiar tu contraseña?</a>
+      </div>
   </div>
 
 	</form>
