--- a/public/conceptos.html
+++ b/public/conceptos.html
@@ -21,6 +21,7 @@
         <nav>
             <a href="index.html">Inicio</a>
             <a href="dashboard.html" id="listado-link">Dashboard</a>
+            <a href="estadisticas.html" id="listado-link">Estadisticas</a>
             <a href="gastos.html">Cargar Gastos</a>
             <a href="rubros.html">Rubros</a>
             <a class="activo"  href="conceptos.html">Conceptos</a>
