--- a/public/gastos.html
+++ b/public/gastos.html
@@ -23,6 +23,7 @@
       <nav>
         <a href="index.html">Inicio</a>
         <a href="dashboard.html" id="listado-link">Dashboard</a>
+        <a href="estadisticas.html" id="listado-link">Estadisticas</a>
         <a class="activo"  href="gastos.html">Cargar Gastos</a>
         <a href="rubros.html">Rubros</a>
         <a href="conceptos.html">Conceptos</a>
