estadisticas graficos de barras

--- a/public/estadisticas.html
+++ b/public/estadisticas.html
@@ -74,16 +74,26 @@
     <section class="estadisticas">
         <article>
             <h3>📊 Resultados</h3>
-            <div id="resultados"></div>
+            <div id="resultados" class="resultados"></div>
         </article>
         <article>
             <h3>📈 Gráfico</h3>
-            <div id="grafico">
-                <canvas id="grafico-evolucion" width="400" height="200"></canvas>
+            <div id="grafico2" class="grafico-conceptos">
+                <canvas id="grafico-evolucion"></canvas>
             </div>
         </article>
     </section>
   </main>
+      <footer>
+        <div class="footer">
+            <a class="redsoc" href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a class="redsoc" href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a class="redsoc" href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a class="redsoc" href="#"><i class="fa-brands fa-pinterest"></i></a>
+            <a class="redsoc" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <p>Derechos reservados @2024</p>
+        </div>
+    </footer>
   <script src="js/estadisticas.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
