agrego tabla porcentajes

--- a/public/estadisticas.html
+++ b/public/estadisticas.html
@@ -82,6 +82,10 @@
                 <canvas id="grafico-evolucion"></canvas>
             </div>
         </article>
+        <article>
+            <h3>📈 Variaciones</h3>
+            <div id="tabla-variaciones" class="tabla-variaciones"></div>
+        </article>
     </section>
   </main>
       <footer>
