modificando gastos detalles

--- a/public/gastos.html
+++ b/public/gastos.html
@@ -86,6 +86,13 @@
                         <div>
                           <input type="button" value="Agregar Gasto" id="agregarGasto">
                         </div>
+
+                        <div id="detallesContainer" style="display: none; margin-top: 20px;">
+                      <h4>Detalles del Gasto</h4>
+                      <div id="detallesList"></div>
+
+                      <button type="button" class="btn btn-secondary" id="agregarDetalleBtn">Agregar Detalle</button>
+                    </div>
                     
 
               
