--- a/public/conceptos.html
+++ b/public/conceptos.html
@@ -66,6 +66,12 @@
                                 <option value="1">Si</option>
                                 <option value="0">No</option>
                             </select>
+                        
+                            <label for="requiereDetalle">¿Requiere detalle?</label>
+                            <select id="requiereDetalle">
+                            <option value="0">No</option>
+                            <option value="1">Sí</option>
+                            </select>
                         </div>
 
                         <input type="button" value="Agregar Concepto" id="agregarConcepto">
