--- a/public/detalle_gasto.html
+++ b/public/detalle_gasto.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://kit.fontawesome.com/e0f7a1940e.js" crossorigin="anonymous"></script>
-  
   <title>GastosHogar</title>
   <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 </head>
 <body>
-    <header>
+  <header>
     <div>
       <a href="index.html">
         <img src="./img/logo.png" alt="Logo de Gastos Hogar"></a>
 
       <h1>Gastos del Hogar</h1>
-      </div>
-      <nav>
-        <a href="index.html">Inicio</a>
-        <a href="dashboard.html" id="listado-link">Dashboard</a>
-        <a href="estadisticas.html" id="listado-link">Estadisticas</a>
-        <a class="activo"  href="gastos.html">Cargar Gastos</a>
-        <a href="rubros.html">Rubros</a>
-        <a href="conceptos.html">Conceptos</a>
-        <a href="listado_gastos.html">Listado de Gastos</a>
-        <a href="login.html" style="display:none;">Log In</a>
-        
-        <a href="index.html">Logout</a>
-      </nav>
-      <!-- <img class="carrito" src="./img/img-nuevas/carrito.png" alt="" /> -->
+        </div>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="dashboard.html" id="listado-link">Dashboard</a>
+            <a href="estadisticas.html" id="listado-link">Estadisticas</a>
+            <a href="gastos.html">Cargar Gastos</a>
+            <a href="rubros.html">Rubros</a>
+            <a href="conceptos.html">Conceptos</a>
+            <a class="activo" href="listado_gastos.html">Listado de Gastos</a>
+            <a href="login.html" style="display:none;">Log In</a>
+            
+            <a href="index.html">Logout</a>
+        </nav>
     </header>
     <main>
       <div class="container">
