graficos estadisticas dashboard y detalles

--- a/public/detalles_gestion.html
+++ b/public/detalles_gestion.html
@@ -59,7 +59,7 @@
                             <button type="submit" class="btn btn-primary">
                                 <i class="fas fa-save"></i> Guardar detalles
                             </button>
-                            <a href="listado_gastos.html" class="btn btn-outline-secondary">
+                            <a href="/listado_gastos.html" class="btn btn-outline-secondary">
                                 <i class="fas fa-arrow-left"></i> Volver al listado
                             </a>
                         </div>
